progressbar and listeners added

--- a/Starwars/app/src/main/res/layout/activity_main.xml
+++ b/Starwars/app/src/main/res/layout/activity_main.xml
@@ -10,6 +10,16 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/swList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        tools:layout_editor_absoluteX="181dp"
+        tools:layout_editor_absoluteY="298dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
