--- a/MyWeatherApp/app/src/main/res/layout/activity_main.xml
+++ b/MyWeatherApp/app/src/main/res/layout/activity_main.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main"
@@ -20,29 +19,33 @@
         android:textSize="24sp"
         android:textStyle="bold" />
 
+    <ProgressBar
+        android:id="@+id/loadingIndicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:visibility="gone" />
 
     <AutoCompleteTextView
         android:id="@+id/searchBar"
-        android:layout_width="300dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/weather"
-        android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="8dp"
+        android:layout_alignParentStart="true"
+        android:layout_toStartOf="@id/useCurrentLocationButton"
         android:background="@drawable/search_bar_background"
         android:hint="@string/search_for_a_city"
         android:padding="16dp" />
-
 
     <ImageButton
         android:id="@+id/useCurrentLocationButton"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_alignTop="@id/searchBar"
-        android:layout_alignEnd="@id/searchBar"
+        android:layout_alignParentEnd="true"
         android:layout_marginStart="8dp"
         android:layout_marginTop="3dp"
-        android:layout_marginEnd="-61dp"
         android:background="@android:color/transparent"
         android:contentDescription="@string/current_location"
         android:src="@drawable/current_location" />
